Update index.css background image

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("uclk3exr.png");
+    background-image: url("background img.png");
     background-size: contain;
     
 }
@@ -273,3 +273,4 @@ ul{
     width: 100%;
 }
 }
+
